<resources>
    <string name="app_name">MyApplication</string>
    <string name="btn">btn</string>
    <string name="btn_1">btn_1</string>
    <string name="btn_2">btn_2</string>
    <string name="btn_3">btn_3</string>
    <string name="btn_4">btn_4</string>
    <string name="btn_5">btn_5</string>
    <string name="btn_6">btn_6</string>
    <string name="btn_7">btn_7</string>
    <string name="song_title">Song Title</string>
    <string name="settings">List View</string>
    <string name="music_menu">Music menu</string>
    <string name="next_screen">Next Screen</string>
    <string name="back_button">Back Button</string>
    <string name="now_playing">Now playing</string>
    <string name="home">Home</string>
    <string name="musicButton">Music</string>
    <string name="phoneButton">Phone</string>
    <string name="backButton">Back</string>
    <string name="overviewButton">Overview</string>
    <string name="prev">Prev</string>
    <string name="play_pause">Play_Pause</string>
    <string name="next">Next</string>
    <string name="more">Card Views</string>
    <string name="TedRadioHour">Ted Radio Hour</string>
    <string name="MinTowork">36 Min To Work</string>
    <string name="accessibility_service_label">Custom Switch Service</string>
    <string name="accessibility_service_description">Custom service description</string>
    <string name="switch_access_service_summary">Control device with switches</string>
</resources>
